add test files and makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,9 +1,18 @@
-VPATH = ../src
-out_test: m_alloc_test.o
-	clang++ -std=c++11 -o out_test m_alloc_test.o ../src/m_alloc.o
+CC = clang++
+CFLAGS = -Wall -std=c++11 
+
+EXECUTABLES = main
+OBJECTS = test_main.o test_objects.o m_vector_test.o m_alloc_test.o 
+
+main.o: test_main.o m_alloc_test.o m_vector_test.o test_objects.o 
+	$(CC) $(CFLAGS) -o $(EXECUTABLES) $(OBJECTS) -lgtest -lpthread
+test_main.o: test_main.cpp
+	$(CC) $(CFLAGS) -c test_main.cpp
 m_alloc_test.o: m_alloc_test.cpp
-	clang++ -c -std=c++11 m_alloc_test.cpp
-m_alloc.o: ../src/m_alloc.h ../src/m_alloc.cpp
-	clang++ -c -std=c++11 m_alloc.cpp
+	$(CC) $(CFLAGS) -c m_alloc_test.cpp
+m_vector_test.o: m_vector_test.cpp
+	$(CC) $(CFLAGS) -c m_vector_test.cpp
+test_objects.o: test_objects.h test_objects.cpp
+	$(CC) $(CFLAGS) -c test_objects.h test_objects.cpp
 clean:
-	rm out_test m_alloc_test.o
+	rm $(EXECUTABLES) $(OBJECTS)
