update test makefile and list test

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,9 +2,9 @@ CC = clang++
 CFLAGS = -Wall -std=c++11 
 
 EXECUTABLES = main
-OBJECTS = test_main.o test_objects.o m_vector_test.o m_alloc_test.o 
+OBJECTS = test_main.o test_objects.o m_vector_test.o m_alloc_test.o m_list_test.o
 
-main.o: test_main.o m_alloc_test.o m_vector_test.o test_objects.o 
+main.o: $(OBJECTS)
 	$(CC) $(CFLAGS) -o $(EXECUTABLES) $(OBJECTS) -lgtest -lpthread
 test_main.o: test_main.cpp
 	$(CC) $(CFLAGS) -c test_main.cpp
@@ -12,6 +12,8 @@ m_alloc_test.o: m_alloc_test.cpp
 	$(CC) $(CFLAGS) -c m_alloc_test.cpp
 m_vector_test.o: m_vector_test.cpp
 	$(CC) $(CFLAGS) -c m_vector_test.cpp
+m_list_test.o: m_list_test.cpp
+	$(CC) $(CFLAGS) -c m_list_test.cpp
 test_objects.o: test_objects.h test_objects.cpp
 	$(CC) $(CFLAGS) -c test_objects.h test_objects.cpp
 clean:
